<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/layout_settings" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_ads">
        <RelativeLayout android:background="?android:selectableItemBackground" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/height_item">
            <TextView android:textSize="@dimen/text_size_item_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_code_highlight" android:layout_centerVertical="true" />
            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/switch_code_highlight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:background="?android:selectableItemBackground" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/height_item">
            <TextView android:textSize="@dimen/text_size_item_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_images_preview" android:layout_centerVertical="true" />
            <com.google.android.material.switchmaterial.SwitchMaterial android:id="@id/switch_images_preview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
    <include android:id="@id/layout_ads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" layout="@layout/include_native_custom_medium" />
</RelativeLayout>