<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="@color/white" android:focusableInTouchMode="true" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/layout_new" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="?actionBarSize">
        <com.google.android.material.textfield.TextInputLayout android:id="@id/textinputlayout_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:id="@id/textinputedittext_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_enter_url" android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24" android:inputType="textMultiLine|textUri" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:id="@id/button_load" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="24.0dip" android:minHeight="56.0dip" android:text="@string/action_open" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/include_native_custom_medium" />
        </ScrollView>
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swipe_refresh" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="?actionBarSize">
        <WebView android:id="@id/webview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/layout_bottom_sheet" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" app:behavior_hideable="false" app:behavior_peekHeight="?actionBarSize" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <RelativeLayout android:background="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
            <ImageView android:id="@id/image_sources" android:padding="15.0dip" android:layout_width="?actionBarSize" android:layout_height="?actionBarSize" android:src="@drawable/ic_baseline_list_alt_white_24" android:layout_centerVertical="true" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/image_open_sources" android:layout_toRightOf="@id/image_sources" android:layout_centerVertical="true">
                <TextView android:textColor="@android:color/white" android:id="@id/txt_sources_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_sources" />
                <TextView android:textColor="@android:color/white" android:id="@id/txt_console_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_console" />
                <TextView android:textColor="@android:color/white" android:id="@+id/txt_scan_results_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_scan_results" />
            </RelativeLayout>
            <ImageView android:id="@id/image_open_sources" android:background="?selectableItemBackground" android:padding="15.0dip" android:layout_width="?actionBarSize" android:layout_height="?actionBarSize" android:src="@drawable/ic_baseline_keyboard_arrow_up_24" android:layout_toLeftOf="@id/img_tab" android:layout_centerVertical="true" />
            <ImageView android:id="@id/img_tab" android:background="?selectableItemBackground" android:padding="15.0dip" android:layout_width="?actionBarSize" android:layout_height="?actionBarSize" android:src="@null" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.core.widget.NestedScrollView android:id="@id/scroll_console" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_ads">
                <TextView android:id="@id/txt_console" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textIsSelectable="true" />
            </androidx.core.widget.NestedScrollView>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_sources" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_ads" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_scan_results" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_ads" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            <include android:id="@id/layout_ads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" layout="@layout/include_banner_ads" />
        </RelativeLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>